# causal-chart-api-uplift-modeling

./: .gitignore  Dockerfile  README.md  app.py  causalml.ipynb  config.py  docker-compose.yml  example_request.py  jupyter_modeling.py  main.py  model.py  pyproject.toml  requirements.txt  schemas.py  uplift_models.py  }
GET /: models
GET /model/: {model_path}
POST /: train
app/: __init__.py  api.py  schemas.py
client_utils/: debug_helpers.py
examples/: Untitled.ipynb  __init__.py  api_modeling_client_enhanced.py  api_modeling_client_fixed.py  api_modeling_direct.py  causalml.ipynb  causalml_api-Copy1.ipynb  causalml_api-Copy1.py  causalml_api.ipynb  causalml_api.py  jupyter_modeling.py  qni_causalml_api.ipynb  qni_causalml_api.py  test_api.py
minimal_api/: Dockerfile
models/: __init__.py  model.py
pages/: 01_quick_demo.py  02_full_demo.py
utils/: __init__.py  config.py  evaluation.py  font_settings.py
