[tool.poetry]
name = "causal-chart-api-uplift-modeling"
version = "0.1.0"
description = "アップリフトモデリングのためのAPIサービス"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pandas = "^2.1.0"
numpy = "^1.25.2"
scikit-learn = "1.0.2"
causalml = "^0.13.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"
python-multipart = "^0.0.6"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
